Change color scheme a bit to be more black and white.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Global Game Jam 2019</title>
   <meta name="description" content="Global Game Jam 2019">
-  <meta name="theme-color" content="#168db5">
+  <meta name="theme-color" content="#ffffff">
   <meta name="mobile-web-app-capable" content="yes">
 
   <style>
@@ -15,7 +15,7 @@
       margin: 0;
       padding: 0;
       color: white;
-      background-color: #168db5;
+      background-color: #000000;
       font-family: 'Times New Roman', Times, serif;
     }
 
